--- a/frontend/drinks/src/App.css
+++ b/frontend/drinks/src/App.css
@@ -1,17 +1,60 @@
 /* App.css */
 
 .global {
-  width: 100%;
-  max-width: 800px;
+  width: 90%;
+  height: auto;
   margin: 0 auto;
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .nav {
   text-align: center;
+  background-color: lightgrey;
+  width: 100%;
+  height: 100px;
+  margin-bottom: 20px;
+  padding: 2%;
+}
+
+/* Form style  */
+
+.form-group {
   margin-bottom: 20px;
 }
 
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 5px;
+}
+
+button[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+
+
+
+/* Table style */
 .drink-table {
   width: 100%;
   border-collapse: collapse;
@@ -25,8 +68,11 @@
 }
 
 .drink-table th {
-  background-color: #f2f2f2;
+  background-color:grey;
   text-align: center;
+  color: white;
+  font-weight: bold;
+  letter-spacing: 1px;
 }
 
 .drink-table tr:nth-child(even) {
@@ -35,10 +81,11 @@
 
 .drink-table tr:hover {
   background-color: #ddd;
+  cursor: pointer;
 }
 
 .edit-btn, .delete-btn {
-  background-color: #4CAF50;
+  background-color: red;
   color: white;
   padding: 8px 12px;
   border: none;
